--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -3,7 +3,7 @@
 # ----------------------------------------------------- 
 
 # Setup XDG for screen sharing
-exec-once = ~/dotfiles/hypr/scripts/xdg.sh
+exec-once = $XDG_CONFIG/hypr/scripts/xdg.sh
 
 # Start Polkit
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -12,7 +12,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dunst
 
 # Load GTK settings
-exec-once = ~/dotfiles/hypr/scripts/gtk.sh
+exec-once = $XDG_CONFIG/hypr/scripts/gtk.sh
 
 # Using hypridle to start hyprlock
 exec-once = hypridle
@@ -30,7 +30,7 @@ exec-once = wl-paste --watch cliphist store
 exec-once = swww init || swww-daemon --format xrgb
 
 # Load last wallpaper and waybar with pywal colors
-exec-once = ~/dotfiles/hypr/scripts/wallpaper.sh init
+exec-once = $XDG_CONFIG/hypr/scripts/wallpaper.sh init
 
 # Start ML4W Welcome App
-exec-once = ~/dotfiles/hypr/scripts/ml4w-welcome-autostart.sh
+exec-once = $XDG_CONFIG/hypr/scripts/ml4w-welcome-autostart.sh
