--- a/waybar/themes/starter/config
+++ b/waybar/themes/starter/config
@@ -26,7 +26,7 @@
     "spacing": 0,
 
     // Load Modules
-    "include": ["~/dotfiles/waybar/themes/starter/modules.json"],
+    "include": ["$XDG_CONFIG/waybar/themes/starter/modules.json"],
 
     // Modules Left
     "modules-left": [
