added language settings and changed workspace. replaced conda dependency with pipenv

--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -34,3 +34,6 @@ exec-once = $XDG_CONFIG/hypr/scripts/wallpaper.sh init
 
 # Start ML4W Welcome App
 exec-once = $XDG_CONFIG/hypr/scripts/ml4w-welcome-autostart.sh
+
+# start fcitx
+exec-once = fcitx5
