--- a/hypr/conf/keyboard.conf
+++ b/hypr/conf/keyboard.conf
@@ -4,7 +4,7 @@
 # -----------------------------------------------------
 input {
     kb_layout = us
-    kb_variant = 
+    kb_variant = altgr-intl
     kb_model =
     kb_options =
     numlock_by_default = true
@@ -18,7 +18,7 @@ input {
 
     follow_mouse = 1
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
