added roam and fixed autocompletion

--- a/gh/hosts.yml
+++ b/gh/hosts.yml
@@ -2,4 +2,5 @@ github.com:
     git_protocol: ssh
     users:
         pixelsandpointers:
-    user: pixelsandpointers
+        whaiao:
+    user: whaiao
