--- a/gh/hosts.yml
+++ b/gh/hosts.yml
@@ -1,6 +1,5 @@
 github.com:
-    git_protocol: ssh
+    git_protocol: https
     users:
         pixelsandpointers:
-        whaiao:
-    user: whaiao
+    user: pixelsandpointers
