--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,9 +14,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Bind clearing the screen
-bind L send-keys '^L'
-
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -61,6 +58,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind -n C-p previous-window
+bind -n C-n next-window
+bind -n C-"-" split-window -v -c "#{pane_current_path}"
+bind -n C-"\" split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
