--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,41 +1,106 @@
-# General config: https://alacritty.org/config-alacritty.html
-# imports have to be on top
-import = [
+general.import = [
   "~/.config/alacritty/themes/themes/tokyo-night.toml"
 ]
 
-[colors.primary]
-background = "0x263238"
-foreground = "0xeaeaea"
+general.live_config_reload = true
+
+
+[colors]
+draw_bold_text_with_bright_colors = true
+
+# [[colors.indexed_colors]]
+# color = "0xF8BD96"
+# index = 16
+#
+# [[colors.indexed_colors]]
+# color = "0xF5E0DC"
+# index = 17
+#
+# [colors.bright]
+# black = "0x988BA2"
+# blue = "0x96CDFB"
+# cyan = "0x89DCEB"
+# green = "0xABE9B3"
+# magenta = "0xF5C2E7"
+# red = "0xF28FAD"
+# white = "0xD9E0EE"
+# yellow = "0xFAE3B0"
+#
+# [colors.cursor]
+# cursor = "0xF5E0DC"
+# text = "0x1E1D2F"
+#
+# [colors.normal]
+# black = "0x6E6C7E"
+# blue = "0x96CDFB"
+# cyan = "0x89DCEB"
+# green = "0xABE9B3"
+# magenta = "0xF5C2E7"
+# red = "0xF28FAD"
+# white = "0xD9E0EE"
+# yellow = "0xFAE3B0"
+#
+# [colors.primary]
+# background = "0x1E1D2F"
+# foreground = "0xD9E0EE"
 
 [cursor]
-style = "Block"
-unfocused_hollow = true
+blink_interval = 500
+blink_timeout = 5
+unfocused_hollow = false
+
+[cursor.style]
+blinking = "Off"
+shape = "Block"
 
 [env]
-SHELL = "/bin/zsh"
+TERM = "xterm-256color"
 
 [font]
-size = 12
+size = 18
+
+[font.bold]
+family = "JetBrainsMono Nerd Font"
+style = "Bold"
+
+[font.glyph_offset]
+x = 0
+y = 0
+
+[font.italic]
+family = "JetBrainsMono Nerd Font"
 
 [font.normal]
 family = "JetBrainsMono Nerd Font"
-style = "Medium"
+style = "Regular"
 
-[[keyboard.bindings]]
-action = "SpawnNewInstance"
-key = "N"
-mods = "Command"
+[font.offset]
+x = 0
+y = 0
 
-[shell]
+[mouse]
+hide_when_typing = true
+
+[[mouse.bindings]]
+action = "PasteSelection"
+mouse = "Middle"
+
+[selection]
+semantic_escape_chars = ",│`|:\"' ()[]{}<>"
+
+[terminal.shell]
 program = "/bin/zsh"
 
 [window]
-decorations = "none"
-opacity = 0.7
-startup_mode = "Maximized"
+decorations = "full"
+dynamic_title = true
+option_as_alt = "Both"
+#startup_mode = "Maximized"
+
+[window.dimensions]
+columns = 160
+lines = 80
 
 [window.padding]
-x = 5
-y = 5
-
+x = 4
+y = 4
