--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -97,12 +97,12 @@ outer.right =      8
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
 # You can uncomment the following lines to open up terminal with alt + enter shortcut (like in i3)
-alt-enter = '''exec-and-forget osascript -e '
-tell application "iTerm"
-    do script
-    activate
-end tell'
-'''
+# alt-enter = '''exec-and-forget osascript -e '
+# tell application "iTerm"
+#     do script
+#     activate
+# end tell'
+# '''
 
 # Disabling some application shortcuts
 cmd-h = []
