--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,5 +61,5 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind -n C-p previous-window
 bind -n C-n next-window
 bind -n C-"-" split-window -v -c "#{pane_current_path}"
-bind -n C-"\" split-window -h -c "#{pane_current_path}"
+bind -n C-"\\" split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
