--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,9 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# top side statusbar
+set -g status-position top
+
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
