--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -45,6 +45,7 @@ set -g @tokyo-night-tmux_window_id_style dsquare
 set -g @tokyo-night-tmux_window_id_style dsquare
 set -g @tokyo-night-tmux_show_git 0
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
