Nvim/Tmux: added transparency to theme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,7 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # top side statusbar
+set -g status on
 set -g status-position top
 
 # Use Alt-arrow keys without prefix key to switch panes
@@ -37,23 +38,25 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_show_path 1
 set -g @tokyo-night-tmux_path_format relative
 set -g @tokyo-night-tmux_window_id_style dsquare
 set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_show_git 0
+set -g @tokyo-night-tmux_show_git 1
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'aserowy/tmux.nvim'
+set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-#set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.config/tmux/plugins/tpm/tpm'
+
+set -g @sessionx-bind 's'
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -67,3 +70,6 @@ bind -n C-n next-window
 bind -n C-"-" split-window -v -c "#{pane_current_path}"
 bind -n C-"\\" split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# Has to appear last
+set-option -g status-style bg=default
