--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,7 +39,7 @@ bind -n M-H previous-window
 bind -n M-L next-window
 
 set -g @tokyo-night-tmux_show_datetime 0
-set -g @tokyo-night-tmux_show_path 1
+set -g @tokyo-night-tmux_show_path 0
 set -g @tokyo-night-tmux_path_format relative
 set -g @tokyo-night-tmux_window_id_style dsquare
 set -g @tokyo-night-tmux_window_id_style dsquare
@@ -84,7 +84,7 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
-bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
+# bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
 # set vi-mode
 set-window-option -g mode-keys vi
