--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,10 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+# image support
+set -gq allow-passthrough on
+set -g visual-activity off
+
 # Vim style pane selection
 bind h select-pane -L
 bind j select-pane -D
