--- a/ghostty/config
+++ b/ghostty/config
@@ -56,3 +56,4 @@ font-size = 9
 keybind = alt+left=unbind
 keybind = alt+right=unbind
 macos-option-as-alt = true
+keybind = shift+enter=text:\x1b\r
