--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,6 +48,7 @@ set -g @tokyo-night-tmux_path_format relative
 set -g @tokyo-night-tmux_window_id_style dsquare
 set -g @tokyo-night-tmux_window_id_style dsquare
 set -g @tokyo-night-tmux_show_git 1
+set -g @tokyo-night-tmux_show_music 0
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tpm'
@@ -61,6 +62,10 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 run '~/.config/tmux/plugins/tpm/tpm'
 
 set -g @sessionx-bind 's'
+
+# Now playing (macOS: Apple Music, Linux: playerctl)
+set -g status-right-length 100
+set -ga status-right "#[fg=#7aa2f7] #(~/.config/tmux/now-playing.sh)"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
